--- a/client/src/styles/components/Item/Footer.scss
+++ b/client/src/styles/components/Item/Footer.scss
@@ -1,10 +1,9 @@
-@import '../../base/settings';
+@import "../../base/settings";
+@import "../../base/utility-classes";
 
 .Item__Footer {
-    display: flex;
-    font-size: $s-size*0.9;
-    padding: $s-size;
-    align-items: center;
-    justify-content: flex-end;
-    border-top: 1px solid $lightest-gray;
+  @include basic-flex(flex-end);
+  font-size: $s-size * 0.9;
+  padding: $s-size;
+  border-top: 1px solid $lightest-gray;
 }
