--- a/client/src/styles/components/Item/Modal.scss
+++ b/client/src/styles/components/Item/Modal.scss
@@ -1,6 +1,8 @@
 @import "../../base/settings";
+@import "../../base/utility-classes";
 
 .Modal {
+  @include basic-flex(center, row-reverse);
   background-color: $dark-gray;
   color: $whiter-than-body-white;
   width: 100%;
@@ -10,20 +12,13 @@
   z-index: 2;
   top: 0;
   left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row-reverse;
   .content-container {
+    @include basic-flex(center, column);
     max-width: 800px;
     border-radius: 0 10px 10px 0;
     width: 100%;
     height: 90%;
     background-color: darken($lightest-gray, 65%);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     .toggle-pics {
       font-size: $xl-size;
       padding: 10px 20px;
@@ -33,18 +28,13 @@
       }
     }
     .image-child {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      flex-direction: row-reverse;
+      @include basic-flex(space-around, row-reverse, 2);
       width: 90%;
       height: 100%;
       max-width: 750px;
       max-height: 500px;
       .Modal__image-container {
-        flex-grow: 2;
-        display: flex;
-        justify-content: center;
+        @include basic-flex(center);
         margin: 0 $s-size;
         > .image {
           max-width: 100%;
@@ -55,21 +45,6 @@
     }
     .number-child {
       font-size: $m-size;
-    }
-  }
-  .Modal-ads {
-    border-radius: 10px 0 0 10px;
-    &:before {
-      padding: $s-size;
-      text-align: center;
-      content: "תוכן שיווקי";
-    }
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: darken($lightest-gray, 65%);
-    > div {
-      padding: $m-size;
     }
   }
 }
