--- a/client/src/styles/components/Header.scss
+++ b/client/src/styles/components/Header.scss
@@ -1,13 +1,12 @@
 @import "../base/settings";
+@import "../base/utility-classes";
 
 .Header__container {
-  display: flex;
+  @include basic-flex(space-between);
   flex-wrap: wrap;
   overflow: hidden;
-  justify-content: space-between;
   background-color: $whiter-than-body-white;
   box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.12), 0 1px 3px 0 rgba(0, 0, 0, 0.2);
-  align-items: center;
   height: $cont-height-m-size-padding;
 }
 
