--- a/client/src/styles/components/ListsContainer.scss
+++ b/client/src/styles/components/ListsContainer.scss
@@ -1,7 +1,22 @@
 @import "../base/settings";
 
-.ItemList__container {
+.ItemLists {
   width: 85vw;
   max-width: 800px;
-  margin: 0 auto;
+  margin: $l-size auto;
+}
+
+.ItemLists__sorts-and-filters {
+  font-size: $s-size;
+  background-color: lighten($body-white, 30%);
+  border-radius: 5px;
+  border: 1px solid $lightest-gray;
+  padding: $s-size/2;
+  margin: $l-size 0;
+}
+
+.ItemLists__lists {
+  padding: $s-size;
+  background-color: lighten($body-white, 30%);
+  border: 1px solid $lightest-gray;
 }
