--- a/client/src/styles/components/Item/Thumbnail.scss
+++ b/client/src/styles/components/Item/Thumbnail.scss
@@ -2,6 +2,8 @@
 
 .ColumnChild {
   .thumbnail-container {
+    font-size: $s-size/1.2;
+    overflow-wrap: break-word;
     padding: 0;
     overflow: hidden;
     border-radius: 3px;
