--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -2,6 +2,8 @@
 
 html {
   font-size: 62.5%;
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
 }
 
 body {
@@ -17,7 +19,7 @@ body {
     margin: $l-size auto;
     > div {
       margin: $l-size 0;
-      background-color:  lighten($body-white, 30%);
+      background-color: lighten($body-white, 30%);
       border: 1px solid $lightest-gray;
     }
   }
