--- a/client/src/styles/components/forms/Signup.scss
+++ b/client/src/styles/components/forms/Signup.scss
@@ -13,9 +13,9 @@
   }
 }
 
-.Signup__submit {    
+.Signup__submit {
   button {
-    border-radius: 15px; 
+    border-radius: 15px;
     border: none;
     padding: $s-size/2;
     display: block;
@@ -24,4 +24,31 @@
     color: $whiter-than-body-white;
     width: 100px;
   }
+}
+
+.Signup__error-message {
+  background: adjust-color($color: #c51244, $alpha: -0.2);
+  color: $body-white;
+  padding: 5px;
+  border-radius:3px;
+  position: absolute;
+  display: block;
+  box-shadow: 1px 1px 1px #aaaaaa;
+  margin-top: 10px;
+  text-align: center;
+  font-size: $s-size;
+  &:before {
+    content: "";
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    border-bottom: 10px solid adjust-color($color: #c51244, $alpha: -0.2);
+    position: absolute;
+    top: -10px;
+  }
+}
+
+.Signup__unit {
+  max-width: 600px;
 }
