errors working as wanted in form.

--- a/client/src/styles/components/forms/form-utilities.scss
+++ b/client/src/styles/components/forms/form-utilities.scss
@@ -24,6 +24,9 @@ form {
   position: relative;
   display: inline-block;
   .error-message {
+    &:hover{
+      visibility: hidden;
+    }
     background: adjust-color($color: #c51244, $alpha: -0.2);
     color: $body-white;
     padding: 5px;
