moment->dayjs. styling. change to lister schema.

--- a/client/src/styles/components/SortBy/SortBy.scss
+++ b/client/src/styles/components/SortBy/SortBy.scss
@@ -7,9 +7,15 @@
     @include basic-flex;
     > * {
       padding: $s-size/2;
+      margin: $s-size/2;
     }
   }
   margin: $s-size 0;
+  height: fit-content;
+}
+
+.SortBy__limit{
+ min-width: 45px; 
 }
 
 .SortBy__button {
