--- a/client/src/styles/components/Item/top-bar-generalities.scss
+++ b/client/src/styles/components/Item/top-bar-generalities.scss
@@ -43,6 +43,7 @@
   .PriceColumn {
     @extend .column;
     @include text-child(left);
+    flex-basis: 20%;
     justify-content: flex-end;
     border-left: 0;
   }
