--- a/client/src/styles/components/Item/Level3.scss
+++ b/client/src/styles/components/Item/Level3.scss
@@ -20,6 +20,10 @@
       &.faded {
         opacity: 0.5;
       }
+      > img {
+        height: 20px;
+        width: 20px;
+      }
     }
   }
 }
