--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -1,7 +1,7 @@
 @import "../fonts/rubik.scss";
 
 html {
-  font-size: 62.5%;
+  font-size: 70%;
   overflow: -moz-scrollbars-vertical;
   overflow-y: scroll;
 }
@@ -24,16 +24,16 @@ button:disabled {
 }
 
 
-@media only screen and (max-width: 630px) {
-  html {
-    font-size: 50%;
-  }
-}
+// @media only screen and (max-width: 630px) {
+//   html {
+//     font-size: 50%;
+//   }
+// }
 
-@media only screen and (min-width: 800px) {
-  html {
-    font-size: 75%;
-  }
-}
+// @media only screen and (min-width: 800px) {
+//   html {
+//     font-size: 75%;
+//   }
+// }
 
 
