--- a/client/src/styles/components/forms/form-utilities.scss
+++ b/client/src/styles/components/forms/form-utilities.scss
@@ -10,10 +10,14 @@
     text-align: right;
   }
 }
-
 .pure-form-aligned .pure-control-group label {
   width: 7em;
   margin-right: 2px;
+}
+
+.asterisk {
+  content: "* ";
+  color: red;
 }
 
 form {
@@ -27,8 +31,7 @@ form {
       margin-right: 5px;
       word-wrap: break-word;
       &:before {
-        content: "* ";
-        color: red;
+        @extend .asterisk;
       }
     }
   }
@@ -39,13 +42,14 @@ form {
     }
   }
   .required-fields label:after {
-    content: "*";
-    color: red;
+    @extend .asterisk;
   }
   label {
     width: 20px;
   }
 }
+
+
 
 .error-message-container {
   position: relative;
