--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -1,7 +1,7 @@
 @import "../fonts/rubik.scss";
 
 html {
-  font-size: 70%;
+  font-size: 62.5%;
   overflow: -moz-scrollbars-vertical;
   overflow-y: scroll;
 }
@@ -12,7 +12,7 @@ body {
   font-weight: 500;
   background-color: $body-white;
   color: #363636;
-  direction: rtl;  
+  direction: rtl;
 }
 
 button {
@@ -23,17 +23,14 @@ button:disabled {
   cursor: default;
 }
 
-
-// @media only screen and (max-width: 630px) {
-//   html {
-//     font-size: 50%;
-//   }
-// }
+@media only screen and (max-width: 630px) {
+  html {
+    font-size: 50%;
+  }
+}
 
 // @media only screen and (min-width: 800px) {
 //   html {
 //     font-size: 75%;
 //   }
 // }
-
-
