--- a/client/src/styles/components/Item/SpreadTopBar.scss
+++ b/client/src/styles/components/Item/SpreadTopBar.scss
@@ -7,6 +7,10 @@
   > div {
     padding: 0;
   }
+  .thumbnail-container {
+    height: 100px;
+    width: 160px;
+  }
   .container-of-all-columns-bar-image-column {
     display: flex;
     justify-content: space-between;
