--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -1,4 +1,5 @@
 @import "../fonts/rubik.scss";
+@import "./settings.scss";
 
 html {
   font-size: 62.5%;
@@ -8,9 +9,7 @@ html {
 
 body {
   font-family: "rubik-heb", Helvetica, sans-serif;
-  font-size: $body-font;
   font-weight: 500;
-  background-color: $body-white;
   color: #363636;
   direction: rtl;
 }
@@ -23,14 +22,45 @@ button:disabled {
   cursor: default;
 }
 
-@media only screen and (max-width: 630px) {
-  html {
-    font-size: 50%;
+$sm: 576;
+$md: 768;
+$lg: 992;
+$xl: 1200;
+
+// Small devices (landscape phones, 576px and up)
+@media (max-width: $md+"px") {
+  .Item__container {
+    font-size: $s-size;
+    .text-child {
+      padding: 8px !important;
+    }
+    .thumbnail-container {
+      height: 50px !important;
+      width: 80px !important;
+    }
   }
 }
 
-// @media only screen and (min-width: 800px) {
-//   html {
-//     font-size: 75%;
-//   }
-// }
+// Medium devices (tablets, 768px and up)
+@media (min-width: $md+"px") {
+  html {
+    font-size: 62.5%;
+  }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: $lg+"px") {
+  html {
+  }
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: $xl+"px") {
+}
+
+:export {
+  small: $sm;
+  medium: $md;
+  large: $lg;
+  xlarge: $xl;
+}
