--- a/client/src/styles/base/_base.scss
+++ b/client/src/styles/base/_base.scss
@@ -41,8 +41,8 @@ $xl: 1200;
     border: none;
     padding-left: 0;
     padding-right: 0;
-    margin-left: 1px;
-    margin-right: 1px;
+    margin-left: 3px;
+    margin-right: 3px;
   }
   .Item__container {
     border-radius: 2px;
@@ -56,8 +56,10 @@ $xl: 1200;
 
 // Small devices (landscape phones, 576px and up)
 @media (max-width: $md+"px") {
-  .Item__container {
+  .body__content {
     font-size: $s-size;
+  }
+  .Item__container {
     .MiniItem {
       padding: 6px 0 !important;
     }
