finished styling red prompt.

--- a/client/src/styles/base/_settings.scss
+++ b/client/src/styles/base/_settings.scss
@@ -11,6 +11,8 @@ $pretty-gray: rgba(0, 0, 0, 0.5);
 $dark-gray: rgba(37, 37, 36, 0.9);
 $faded-attr-gray: rgb(182, 182, 182);
 $lightest-gray: rgba(0, 0, 0, 0.1);
+$beige: #f1e8d9;
+$text-for-beige: #552f00;
 
 $button-green: rgb(15, 202, 128);
 
